--- a/css/profile.css
+++ b/css/profile.css
@@ -1,4 +1,43 @@
-#userImgprofile{
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+  }
+  
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #1d96ce;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  #userImgprofile {
     width: 120px;
     height: 120px;
-}
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
+  
+  .username {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+  
+  .delete-link {
+    color: red;
+    cursor: pointer;
+  }
+  
+  .delete-link:hover {
+    text-decoration: underline;
+  }
+  
