--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,4 @@
-/* *{
-    padding: 0;
-    margin: 0;
-}
-body{
-    overflow: hidden;
-}
-.container{
-    background-color: brown;
-    width: 100%;
-    height: 100vh;
-}
-.container .Left{
-    background-color: blue;
-    width: 50%;
-    float: left;
-    height: 100vh;
-    text-align: center;
-}
-.inputContainer{
-    background-color: blueviolet;
-    margin: 30px;
-    height: 70%;
-}
-.inputContainer input{
-    padding: 10px;
-    cursor: pointer;
-}
-.inputContainer button{
-    margin-top: 400px;
-    width: 80px;
-    height: 40px;
-    cursor: pointer;
-    border-radius: 10px;
-}.inputContainer button:hover{
-    border: 1px groove black;
-}
-.container .Right{
-    background-color: red;
-    width: 50%;
-    float: right;
-    height: 50vh;
-    text-align: center;
-} */
-/* style.css */
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -110,7 +66,6 @@ button:hover {
   border-radius: 50%;
   float: left;
 }
-
 .Navbar {
   top: 0;
   left: 0;
@@ -119,21 +74,66 @@ button:hover {
   height: 100px;
   background-color: #1d96ce;
   display: flex;
-  align-items: center; /* Center align items vertically */
-  padding: 0 20px; /* Added padding for spacing */
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.menuIcons {
+  display: flex;
+}
+
+.menuIcons img {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  margin-right: 10px; /* Adjust spacing between icons */
 }
 
 .Navbar ul {
   list-style: none;
-  margin-left: auto; /* Push the list to the right */
+  margin: 0;
+  padding: 0;
 }
 
 .Navbar ul li {
   display: inline;
-  padding: 10px;
-  margin: 0 10px; /* Adjusted margin */
+  margin-right: 20px;
 }
 
-.Navbar ul li span {
-  padding-top: 50px;
+.Navbar ul li:last-child {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 768px) {
+  /* Adjusting styles for smaller screens */
+  .Navbar ul {
+    display: none;
+    width: 100%;
+    padding: 20px;
+    background-color: #888888;
+    text-align: center;
+    margin-top: 222px;
+  }
+
+  .Navbar ul.active {
+    display: block;
+  }
+
+  .Navbar ul li {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .menuIcons {
+    margin-left: 20px; /* Adjust spacing between icons and user image */
+  }
+
+  .Navbar img#menuIcon {
+    display: block;
+  }
+
+  .Navbar img#closeIcon {
+    display: none;
+  }
 }
